@@ -23,9 +23,9 @@ SET(CMAKE_USE_RELATIVE_PATHS OFF)
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_admin")
 
 SET (VERSION_MAJOR "0")
-SET (VERSION_MINOR "9")
-SET (VERSION_PATCH "4")
-SET (VERSION_SUFFIX "svn")
+SET (VERSION_MINOR "10")
+SET (VERSION_PATCH "0")
+SET (VERSION_SUFFIX "rc1")
 SET (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_SUFFIX})
 ADD_DEFINITIONS(-D'VERSION="${VERSION}"')
 
