@@ -1,0 +1,134 @@
+[bossa1]
+36=8,,,5,8,,,6,8,,,6,8,,,8
+37=6,,7,,,6,,,,7,,,,6,,
+42=7,6,6,6,6,6,5,6,5,6,5,6,5,6,6,6
+67=,,,5,5,,,,,,,5,6,,,
+68=6,,,,,,5,5,,,,,,,4,4
+Beats=16
+Figure=16
+
+[bossa2]
+36=,,,6,8,,,6,8,,,6,8,,,6
+37=,,7,,,6,,,,6,,7,,7,,
+42=6,5,6,6,5,5,6,6,6,6,5,6,5,6,5,5
+67=,,6,,,,,,,5,,5,,,,
+68=5,,,,,5,,5,,,,,5,,5,
+Beats=16
+Figure=16
+
+[calypso]
+36=8,,,,,,,,8,,,,8,,,
+42=,,7,,7,,,,,,7,,7,,7,
+43=,,,,,,,,,,,,7,,,
+44=7,,,,,,7,,7,,,,,,,
+56=,,,,8,,,8,,,,,8,,,8
+60=,,,8,8,,,,,,,8,,,,
+62=8,,,,,,8,,8,,,,8,,,
+64=,,,,,,,,,,,,,,8,
+75=6,,,,,,,6,,,,,6,,,
+Beats=16
+Figure=16
+
+[salsa1]
+35=7,,,5,7,,,5,7,,,5,7,,,5
+38=,,,,,,,,,,,,,,6,
+42=7,4,5,6,7,4,5,6,7,4,5,6,7,7,5,6
+70=8,5,5,6,8,5,5,6,8,5,5,6,8,5,5,6
+Beats=16
+Figure=16
+
+[salsa2]
+35=7,,,5,7,,,5,7,,,5,7,,,5
+38=,,,,,,,,,,,,,,6,
+41=,,,,,,3,,,,,,,,3,
+42=7,7,5,6,7,4,5,6,7,4,5,6,7,4,5,6
+45=3,,,,2,,,,3,,,,2,,,
+48=,,,4,,,,,,,,4,,,,
+56=3,,5,,3,,5,,,3,,5,4,,5,
+62=7,3,,,7,,,,,8,,6,7,,,
+63=,,,6,,,8,,,,,,,,8,
+69=3,6,7,2,3,6,7,2,3,6,7,2,3,6,7,2
+70=8,5,5,6,8,5,5,6,8,5,5,6,8,5,5,6
+Beats=16
+Figure=16
+
+[jamaican]
+Beats=16
+Figure=16
+36=,,,,,,,,9,,,,,,,
+37=,,,5,,,,,9,,,,,,,
+42=6,,,,6,,,6,9,,,6,8,,,
+46=,,,,,,,,,,,,,,,5
+62=,,,,,,,,,,,6,,,,
+64=,,,,,,,,,,,,5,,,5
+69=,,,,2,,,2,,,,,2,,,2
+
+[waltz 3/4]
+36=f,,
+38=,p,p
+59=f,,
+Beats=3
+Figure=4
+
+[7/4 2-2-3]
+34=f,,p,,p,,
+33=,p,,p,,p,p
+Beats=7
+Figure=4
+
+[7/4 3-2-2]
+34=f,,,p,,p,
+33=,p,p,,p,,p
+Beats=7
+Figure=4
+
+[rock1]
+36=f,,p,,,,p,,f,,p,,,,p,
+38=,,,,f,,,,,,,,f,,,
+42=f,,,,f,,p,,f,,,,f,,p,
+46=,,p,,,,,,,,p,,,p,,
+Beats=16
+Figure=16
+
+[rock2]
+36=f,,p,,,,p,,f,,p,,,,p,
+38=,,,,f,,,,,,,,f,,,
+42=f,p,p,p,f,p,p,p,f,p,p,p,f,p,p,p
+Beats=16
+Figure=16
+
+[rock3]
+36=f,,p,,,,p,,f,,p,,,,p,
+38=,,,,f,,,,,,,,f,,,
+42=f,p,p,p,f,p,p,p,f,p,p,p,f,p,p,p
+51=f,,p,,f,,p,,f,,p,,f,,p,
+Beats=16
+Figure=16
+
+[rock4]
+36=f,,,,,,f,,,,p,,,,p,
+37=,,,,f,,,,,,,,f,,,
+42=f,,p,,f,,p,,f,,p,,f,,p,
+Beats=16
+Figure=16
+
+[ballad]
+36=p,,,,,,,p,p,,,,,,,
+38=,,,,p,,,,,,,,p,,,
+42=p,,p,,p,,p,,p,,p,,p,,p,
+Beats=16
+Figure=16
+
+[pop1]
+36=p,,,,,,,,p,,,,,,p,
+38=,,,,f,,p,,,,,,f,,,
+42=p,,p,,f,,p,,p,,p,,f,,p,
+Beats=16
+Figure=16
+
+[pop2]
+36=f,,,,,,,,f,,f,,,,,
+38=,,,,f,,,f,,,,,f,,,
+42=f,,,,f,,,,f,,,,f,,,
+Beats=16
+Figure=16
