@@ -1,3 +1,9 @@
+2010-06-05 00:00 plcl 
+
+    * German translation updated, by Rene Landert
+    * Custom pattern samples
+    * release candidate
+    
 2010-05-23 00:00 plcl
     
     * Enable the standard toolbar
